style: apply code formatter