@@ -7,9 +7,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -21,6 +21,7 @@ package com.flowingcode.vaadin.jsonmigration;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
+
 import com.vaadin.flow.component.ClientCallable;
 import com.vaadin.flow.component.Component;
 import elemental.json.JsonValue;
@@ -53,7 +54,7 @@ public abstract class ClientCallablesTest {
    * Invokes the test method on the instrumented instance via reflection.
    *
    * @param instrumented the instrumented instance
-   * @param args         the arguments to pass to the test method
+   * @param args the arguments to pass to the test method
    * @return the result of the method invocation
    * @throws Exception if invocation fails
    */
@@ -78,48 +79,48 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__V() throws Exception {
-    ClientCallable__V instrumented = instrumentClass(ClientCallable__V.class).getDeclaredConstructor()
-        .newInstance();
+    ClientCallable__V instrumented =
+        instrumentClass(ClientCallable__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_Z__V() throws Exception {
-    ClientCallable_Z__V instrumented = instrumentClass(ClientCallable_Z__V.class).getDeclaredConstructor()
-        .newInstance();
+    ClientCallable_Z__V instrumented =
+        instrumentClass(ClientCallable_Z__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, true);
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_I__V() throws Exception {
-    ClientCallable_I__V instrumented = instrumentClass(ClientCallable_I__V.class).getDeclaredConstructor()
-        .newInstance();
+    ClientCallable_I__V instrumented =
+        instrumentClass(ClientCallable_I__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, 42);
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_D__V() throws Exception {
-    ClientCallable_D__V instrumented = instrumentClass(ClientCallable_D__V.class).getDeclaredConstructor()
-        .newInstance();
+    ClientCallable_D__V instrumented =
+        instrumentClass(ClientCallable_D__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, 3.14);
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_String__V() throws Exception {
-    ClientCallable_String__V instrumented = instrumentClass(ClientCallable_String__V.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable_String__V instrumented =
+        instrumentClass(ClientCallable_String__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, "test");
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test__Z() throws Exception {
-    ClientCallable__Z instrumented = instrumentClass(ClientCallable__Z.class).getDeclaredConstructor()
-        .newInstance();
+    ClientCallable__Z instrumented =
+        instrumentClass(ClientCallable__Z.class).getDeclaredConstructor().newInstance();
     ClientCallable__Z nonInstrumented = new ClientCallable__Z();
     boolean result = (boolean) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -128,8 +129,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__I() throws Exception {
-    ClientCallable__I instrumented = instrumentClass(ClientCallable__I.class).getDeclaredConstructor()
-        .newInstance();
+    ClientCallable__I instrumented =
+        instrumentClass(ClientCallable__I.class).getDeclaredConstructor().newInstance();
     ClientCallable__I nonInstrumented = new ClientCallable__I();
     int result = (int) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -138,8 +139,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__D() throws Exception {
-    ClientCallable__D instrumented = instrumentClass(ClientCallable__D.class).getDeclaredConstructor()
-        .newInstance();
+    ClientCallable__D instrumented =
+        instrumentClass(ClientCallable__D.class).getDeclaredConstructor().newInstance();
     ClientCallable__D nonInstrumented = new ClientCallable__D();
     double result = (double) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -148,8 +149,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__Integer() throws Exception {
-    ClientCallable__Integer instrumented = instrumentClass(ClientCallable__Integer.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable__Integer instrumented =
+        instrumentClass(ClientCallable__Integer.class).getDeclaredConstructor().newInstance();
     ClientCallable__Integer nonInstrumented = new ClientCallable__Integer();
     Integer result = (Integer) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -158,8 +159,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__JsonValue() throws Exception {
-    ClientCallable__JsonValue instrumented = instrumentClass(ClientCallable__JsonValue.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable__JsonValue instrumented =
+        instrumentClass(ClientCallable__JsonValue.class).getDeclaredConstructor().newInstance();
     ClientCallable__JsonValue nonInstrumented = new ClientCallable__JsonValue();
     JsonValue result = (JsonValue) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -168,8 +169,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__JsonBoolean() throws Exception {
-    ClientCallable__JsonBoolean instrumented = instrumentClass(ClientCallable__JsonBoolean.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable__JsonBoolean instrumented =
+        instrumentClass(ClientCallable__JsonBoolean.class).getDeclaredConstructor().newInstance();
     ClientCallable__JsonBoolean nonInstrumented = new ClientCallable__JsonBoolean();
     JsonValue result = (JsonValue) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -178,8 +179,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__JsonNumber() throws Exception {
-    ClientCallable__JsonNumber instrumented = instrumentClass(ClientCallable__JsonNumber.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable__JsonNumber instrumented =
+        instrumentClass(ClientCallable__JsonNumber.class).getDeclaredConstructor().newInstance();
     ClientCallable__JsonNumber nonInstrumented = new ClientCallable__JsonNumber();
     JsonValue result = (JsonValue) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -188,8 +189,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__JsonString() throws Exception {
-    ClientCallable__JsonString instrumented = instrumentClass(ClientCallable__JsonString.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable__JsonString instrumented =
+        instrumentClass(ClientCallable__JsonString.class).getDeclaredConstructor().newInstance();
     ClientCallable__JsonString nonInstrumented = new ClientCallable__JsonString();
     JsonValue result = (JsonValue) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -198,8 +199,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__JsonNull() throws Exception {
-    ClientCallable__JsonNull instrumented = instrumentClass(ClientCallable__JsonNull.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable__JsonNull instrumented =
+        instrumentClass(ClientCallable__JsonNull.class).getDeclaredConstructor().newInstance();
     ClientCallable__JsonNull nonInstrumented = new ClientCallable__JsonNull();
     JsonValue result = (JsonValue) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -208,8 +209,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__JsonArray() throws Exception {
-    ClientCallable__JsonArray instrumented = instrumentClass(ClientCallable__JsonArray.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable__JsonArray instrumented =
+        instrumentClass(ClientCallable__JsonArray.class).getDeclaredConstructor().newInstance();
     ClientCallable__JsonArray nonInstrumented = new ClientCallable__JsonArray();
     JsonValue result = (JsonValue) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -218,8 +219,8 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test__JsonObject() throws Exception {
-    ClientCallable__JsonObject instrumented = instrumentClass(ClientCallable__JsonObject.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable__JsonObject instrumented =
+        instrumentClass(ClientCallable__JsonObject.class).getDeclaredConstructor().newInstance();
     ClientCallable__JsonObject nonInstrumented = new ClientCallable__JsonObject();
     JsonValue result = (JsonValue) invokeTestMethod(instrumented);
     assertTrue(instrumented.hasBeenTraced());
@@ -228,58 +229,57 @@ public abstract class ClientCallablesTest {
 
   @Test
   public void test_JsonValue__V() throws Exception {
-    ClientCallable_JsonValue__V instrumented = instrumentClass(ClientCallable_JsonValue__V.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable_JsonValue__V instrumented =
+        instrumentClass(ClientCallable_JsonValue__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, createJsonNull());
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_JsonBoolean__V() throws Exception {
-    ClientCallable_JsonBoolean__V instrumented = instrumentClass(ClientCallable_JsonBoolean__V.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable_JsonBoolean__V instrumented =
+        instrumentClass(ClientCallable_JsonBoolean__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, createJsonBoolean());
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_JsonNumber__V() throws Exception {
-    ClientCallable_JsonNumber__V instrumented = instrumentClass(ClientCallable_JsonNumber__V.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable_JsonNumber__V instrumented =
+        instrumentClass(ClientCallable_JsonNumber__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, createJsonNumber());
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_JsonString__V() throws Exception {
-    ClientCallable_JsonString__V instrumented = instrumentClass(ClientCallable_JsonString__V.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable_JsonString__V instrumented =
+        instrumentClass(ClientCallable_JsonString__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, createJsonString());
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_JsonNull__V() throws Exception {
-    ClientCallable_JsonNull__V instrumented = instrumentClass(ClientCallable_JsonNull__V.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable_JsonNull__V instrumented =
+        instrumentClass(ClientCallable_JsonNull__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, createJsonNull());
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_JsonArray__V() throws Exception {
-    ClientCallable_JsonArray__V instrumented = instrumentClass(ClientCallable_JsonArray__V.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable_JsonArray__V instrumented =
+        instrumentClass(ClientCallable_JsonArray__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, createJsonArray());
     assertTrue(instrumented.hasBeenTraced());
   }
 
   @Test
   public void test_JsonObject__V() throws Exception {
-    ClientCallable_JsonObject__V instrumented = instrumentClass(ClientCallable_JsonObject__V.class)
-        .getDeclaredConstructor().newInstance();
+    ClientCallable_JsonObject__V instrumented =
+        instrumentClass(ClientCallable_JsonObject__V.class).getDeclaredConstructor().newInstance();
     invokeTestMethod(instrumented, createJsonObject());
     assertTrue(instrumented.hasBeenTraced());
   }
-
 }
